@@ -1,15 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-_Name=Preferred Assistive Technology
-_Comment=Enable support for GNOME assistive technologies at login
-Exec=gnome-default-applications-properties
-Icon=gnome-settings-accessibility-technologies
-Terminal=false
-Type=Application
-StartupNotify=true
-Categories=GNOME;GTK;Settings;Accessibility;
-OnlyShowIn=GNOME;
-X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=gnome-control-center
-X-GNOME-Bugzilla-Component=Preferred applications
-X-GNOME-Bugzilla-Version=@VERSION@
