@@ -1,15 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-_Name=Mobility AT
-_Comment=Run the the preferred GNOME Mobility Assitive Technology
-Exec=gnome-at-mobility
-Icon=icon-accessibility
-Terminal=false
-Type=Application
-StartupNotify=true
-Categories=GNOME;GTK;Settings;Accessibility;
-OnlyShowIn=GNOME;
-X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=gnome-control-center
-X-GNOME-Bugzilla-Component=other capplets
-X-GNOME-Bugzilla-Version=@VERSION@
