@@ -490,11 +490,8 @@ capplets/appearance/data/gnome-theme-installer.desktop.in
 capplets/common/Makefile
 capplets/default-applications/Makefile
 capplets/default-applications/default-applications.desktop.in
-capplets/default-applications/default-applications-accessibility.desktop.in
 capplets/default-applications/gnome-at-commandline.in
-capplets/default-applications/gnome-at-mobility.desktop.in
 capplets/default-applications/gnome-at-session.desktop.in
-capplets/default-applications/gnome-at-visual.desktop.in
 capplets/display/Makefile
 capplets/display/display-properties.desktop.in
 capplets/keybindings/Makefile
