@@ -32,11 +32,8 @@ capplets/common/capplet-stock-icons.c
 capplets/common/capplet-util.c
 capplets/common/file-transfer-dialog.c
 capplets/common/gconf-property-editor.c
-capplets/default-applications/default-applications-accessibility.desktop.in.in
 capplets/default-applications/default-applications.desktop.in.in
-capplets/default-applications/gnome-at-mobility.desktop.in.in
 capplets/default-applications/gnome-at-session.desktop.in.in
-capplets/default-applications/gnome-at-visual.desktop.in.in
 capplets/default-applications/gnome-da-capplet.c
 capplets/default-applications/gnome-default-applications-properties.glade
 capplets/default-applications/gnome-default-applications.xml.in
