@@ -1,3 +1,11 @@
+2007-07-29  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am:
+	* default-applications-accessibility.desktop.in.in:
+	* gnome-at-mobility.desktop.in.in:
+	* gnome-at-visual.desktop.in.in: remove spurious desktop entries
+	(bug #444787)
+
 2007-07-12  Matthias Clasen  <mclasen@redhat.com>
 
 	* gnome-default-applications-properties.glade:
