@@ -1,3 +1,8 @@
+2007-07-29  Jens Granseuer  <jensgr@gmx.net>
+
+	* POTFILES.in:
+	* POTFILES.skip: remove spurious AT desktop entries
+
 2007-07-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
