@@ -1,3 +1,7 @@
+2007-07-29  Jens Granseuer  <jensgr@gmx.net>
+
+	* configure.in: remove spurious AT desktop entries (bug #444787)
+
 2007-07-24  Thomas Wood  <thos@gnome.org>
 
 	* configure.in: Update for recent appearance capplet re-organisation
